# egui_backend_selector

./: .gitignore  Cargo.toml  LICENSE  README.md
egui_backend_selector_test/: Cargo.toml
egui_backend_selector_test/examples/: auto_select.rs  force_eframe.rs  force_swr.rs
egui_backend_selector_test/examples/app/: app.rs
src/: implementation.rs  lib.rs
